added comment for future reference

--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -49,7 +49,7 @@ body {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
-  padding: 16px;
+  padding: 16px;   /* these three are needed for flex-wrap */
   margin: 16px;
   width: 300px;
 }
